k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: university-notes
  labels:
    name: university-notes
